<resources>
    <string name="app_name">MyApp</string>
    <string name="logintext">Sign in</string>
    <string name="emailtext">E-mail</string>
    <string name="passwordtext">Password</string>
    <string name="signinbuttontext">Sign in</string>
    <string name="newacc_text">New ? Create an account.</string>
    <string name="registertext">Register</string>
    <string name="nametext">Full Name</string>
    <string name="notnewacc">Have an account ? Sign In</string>
    <string name="signuptext">Sign up</string>
    <string name="telephonetext">Telephone</string>
    <string name="confirmtext">Confirm Password</string>
    <string name="welcometext">Welcome</string>
    <string name="restaurant_name">to Gourmanje\'</string>
    <string name="guest_text">Continue as a guest</string>
    <string name="signin_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
